<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/nen"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvpheptoan"
            style="@style/txtPhepToan"></TextView>

        <TextView
            android:id="@+id/tvketqua"
            style="@style/txtKetQua"></TextView>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TableRow style="@style/tbrow">

            <Button
                android:id="@+id/btnac"
                style="@style/btnAC_C_PT"
                android:onClick="buttonClick"
                android:text="@string/AC"></Button>

            <Button
                android:id="@+id/btndelete"
                style="@style/btnAC_C_PT"
                android:onClick="buttonClick"
                android:text="@string/xoa"></Button>

            <Button
                android:id="@+id/btnphantram"
                style="@style/btnAC_C_PT"
                android:onClick="buttonClick"
                android:text="@string/phantram"></Button>

            <Button
                android:id="@+id/btnchia"
                style="@style/btnPhepTinh"
                android:onClick="buttonClick"
                android:text="@string/chia"></Button>
        </TableRow>

        <TableRow style="@style/tbrow">

            <Button
                android:id="@+id/btnbay"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/bay"></Button>

            <Button
                android:id="@+id/btntam"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/tam"></Button>

            <Button
                android:id="@+id/btnchin"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/chin"></Button>

            <Button
                android:id="@+id/btnnhan"
                style="@style/btnPhepTinh"
                android:onClick="buttonClick"
                android:text="@string/nhan"></Button>
        </TableRow>

        <TableRow style="@style/tbrow">

            <Button
                android:id="@+id/btnbon"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/bon"></Button>

            <Button
                android:id="@+id/btnnam"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/nam"></Button>

            <Button
                android:id="@+id/btnsau"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/sau"></Button>

            <Button
                android:id="@+id/btntru"
                style="@style/btnPhepTinh"
                android:onClick="buttonClick"
                android:text="@string/tru"></Button>
        </TableRow>

        <TableRow style="@style/tbrow">

            <Button
                android:id="@+id/btnmot"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/mot"></Button>

            <Button
                android:id="@+id/btnhai"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/hai"></Button>

            <Button
                android:id="@+id/btnba"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/ba"></Button>

            <Button
                android:id="@+id/btncong"
                style="@style/btnPhepTinh"
                android:onClick="buttonClick"
                android:text="@string/cong"></Button>
        </TableRow>

        <TableRow style="@style/tbrow">

            <Button
                android:id="@+id/btnkhong"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/khong"></Button>

            <Button
                android:id="@+id/btncham"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/cham"></Button>

            <Button
                android:id="@+id/btnnghicdao"
                style="@style/btnSo"
                android:onClick="buttonClick"
                android:text="@string/nghichdao"></Button>

            <Button
                android:id="@+id/btnbang"
                style="@style/btnPhepTinh"
                android:onClick="buttonClick"
                android:text="@string/bang"></Button>
        </TableRow>
    </TableLayout>

</LinearLayout>
